--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -41,6 +41,7 @@
     font-weight: 100;
     font-style: normal;
     color: #a9a9a9;
+    font-weight: 600;
     font-size: 1.2rem;
 }
 .worked-buttons {
